--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="title">Etch-a-sketch by goat 6</h1>
     <div class="grid-wrapper"></div>
+    <button class="grid-size-button">Change grid size</button>
 </body>
 </html>
