canvas clear and mouse event changes

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1 class="title">Etch-a-sketch by goat 6</h1>
     <div class="grid-wrapper"></div>
     <button class="grid-size-button">Change grid size</button>
+    <button class="clear-canvas-button">Clear canvas</button>
 </body>
 </html>
